--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script
       async
-      src="https://www.googletagmanager.com/gtag/js?id=G-5QX0T6H6JQ"
+      src="https://www.googletagmanager.com/gtag/js?id=G-EPXXDHSNM3"
     ></script>
     <script>
       window.dataLayer = window.dataLayer || [];
@@ -15,7 +15,7 @@
         dataLayer.push(arguments);
       }
       gtag("js", new Date());
-      gtag("config", "G-5QX0T6H6JQ");
+      gtag("config", "G-EPXXDHSNM3");
     </script>
     <title>Rolldebee</title>
     <!-- Open Graph -->
