--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script
       async
-      src="https://www.googletagmanager.com/gtag/js?id=G-EPXXDHSNM3"
+      src="https://www.googletagmanager.com/gtag/js?id=G-5QX0T6H6JQ"
     ></script>
     <script>
       window.dataLayer = window.dataLayer || [];
@@ -15,20 +15,20 @@
         dataLayer.push(arguments);
       }
       gtag("js", new Date());
-      gtag("config", "G-EPXXDHSNM3");
+      gtag("config", "G-5QX0T6H6JQ");
     </script>
     <title>Rolldebee</title>
     <!-- Open Graph -->
     <meta property="og:title" content="Rolldebee" />
-    <meta property="og:description" content="Database CI/CD" />
+    <meta property="og:description" content="First ever database CI/CD" />
     <meta property="og:url" content="https://rolldebee.com" />
     <meta
       property="og:image"
       content="https://rolldebee.com/assets/opengraph.png"
     />
-    <script type="module" crossorigin src="/assets/index.39d48151.js"></script>
-    <link rel="modulepreload" href="/assets/vendor.ad6191b8.js">
-    <link rel="stylesheet" href="/assets/index.98ceb4b9.css">
+    <script type="module" crossorigin src="/assets/index.57b59c35.js"></script>
+    <link rel="modulepreload" href="/assets/vendor.1aed49d5.js">
+    <link rel="stylesheet" href="/assets/index.fda68f61.css">
   </head>
   <body class="font-inter antialiased bg-white text-gray-900 tracking-tight">
     <noscript>You need to enable JavaScript to run this app.</noscript>
