--- a/index.html
+++ b/index.html
@@ -10,12 +10,12 @@
       src="https://www.googletagmanager.com/gtag/js?id=G-5QX0T6H6JQ"
     ></script>
     <script>
-      window.dataLayer = window.dataLayer || [];
+      window.dataLayer = window.dataLayer || []
       function gtag() {
-        dataLayer.push(arguments);
+        dataLayer.push(arguments)
       }
-      gtag("js", new Date());
-      gtag("config", "G-5QX0T6H6JQ");
+      gtag('js', new Date())
+      gtag('config', 'G-5QX0T6H6JQ')
     </script>
     <title>Rolldebee</title>
     <!-- Open Graph -->
@@ -26,9 +26,9 @@
       property="og:image"
       content="https://rolldebee.com/assets/opengraph.png"
     />
-    <script type="module" crossorigin src="/assets/index.5ca4c173.js"></script>
-    <link rel="modulepreload" href="/assets/vendor.ec837781.js">
-    <link rel="stylesheet" href="/assets/index.fda68f61.css">
+    <script type="module" crossorigin src="/assets/index.ff641779.js"></script>
+    <link rel="modulepreload" href="/assets/vendor.34b6700f.js">
+    <link rel="stylesheet" href="/assets/index.cde32b4b.css">
   </head>
   <body class="font-inter antialiased bg-white text-gray-900 tracking-tight">
     <noscript>You need to enable JavaScript to run this app.</noscript>
