--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/assets/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <!-- Google tag (gtag.js) -->
     <script
       async
-      src="https://www.googletagmanager.com/gtag/js?id=G-5QX0T6H6JQ"
+      src="https://www.googletagmanager.com/gtag/js?id=G-EPXXDHSNM3"
     ></script>
     <script>
       window.dataLayer = window.dataLayer || []
@@ -15,7 +15,7 @@
         dataLayer.push(arguments)
       }
       gtag('js', new Date())
-      gtag('config', 'G-5QX0T6H6JQ')
+      gtag('config', 'G-EPXXDHSNM3')
     </script>
     <title>Rolldebee</title>
     <!-- Open Graph -->
@@ -26,8 +26,8 @@
       property="og:image"
       content="https://rolldebee.com/assets/opengraph.png"
     />
-    <script type="module" crossorigin src="/assets/index.cbf1e164.js"></script>
-    <link rel="modulepreload" href="/assets/vendor.70d6226e.js">
+    <script type="module" crossorigin src="/assets/index.e7c3f8bb.js"></script>
+    <link rel="modulepreload" href="/assets/vendor.fe0bc615.js">
     <link rel="stylesheet" href="/assets/index.a9cbe434.css">
   </head>
   <body class="font-inter antialiased bg-white text-gray-900 tracking-tight">
